add notebook dependencies

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,4 +13,4 @@ repos:
     rev: v0.7.0
     hooks:
     -   id: ruff
-        args: ["--fix", "--show-source"]
+        args: ["--fix", "--show-files"]
