--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 python = ">=3.9"
 scikit-learn = ">=1.5.2"
 statsmodels = ">=0.14.4"
+autograd = ">=1.7.0"
 
 [tool.pixi.pypi-dependencies]
 drift_diffusion = { path=".", editable=true }
