allow lock file to be modified

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           pixi-version: v0.39.5
           environments: ${{ matrix.environment }}
-          frozen: true
+          frozen: false
 
       - name: Run tests
         run: pixi run -e ${{ matrix.environment }} test
