--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           pixi-version: v0.39.5
           environments: lint
-          frozen: true
+          frozen: false
 
       - name: Run linter
         run: pixi run -e lint lint
